Refactor CommitHistory.